app/assets/stylesheets/partials/modules/_detail-view.scss
/* ======================================================================================
   @MODULES -> DETAIL VIEW
   ====================================================================================== */

/*
  Usage:
    Detail views mainly for 'Products', 'Events' and 'Deals'.

  Demo:
    Style Guide -> Modules -> Detail View
*/

/* Styles for `body` element at this breakpoint */
@include respond-max($palm) {
  .page-detail-view {
    background-color: #fff;
    padding-bottom: 0;
  }
}

/* Start module */
.detail-view {
  @include font-size($font-size-sml);

  /* Turn off shadow at this breakpoint */
  @include respond-max($palm) {
    box-shadow: none;
  }

  /* Adjustments at this breakpoint */
  @include respond-min($non-palm) {
    @include font-size($font-size);
    width: $page-container-width;
    margin-left: auto;
    margin-right: auto;
    @include to-rem(margin-top, $spacing-base);
  }

  /* Set fixed width at this breakpoint */
  @include respond-min($ipad-portrait) {
    @include to-rem(width, 680);
  }

  /* --Set fixed widths for each detail view at these breakpoints-- */

  /* Override the default `.detail-view` width at iPad portrait */
  @include respond-min($ipad-portrait) {
    &.detail-view--deal,
    &.detail-view--product {width: $page-container-width;}
  }

  /* Deal */
  @include respond-min(826) {
    &.detail-view--deal {@include to-rem(width, 760);}
  }

  /* Product */
  @include respond-min(978) {
    &.detail-view--product {@include to-rem(width, 900);}
  }

  /* --Global rules-- */

  /* Off with bottom margins */
  p {margin-bottom: 0;}

  /* Headings */
  .hn {font-family: $font-family-opensans;}

  /* Micello map */
  .map-micello {
    position: relative;
    z-index: 1;
    background-color: $color-off-white;
    @include to-rem(min-height, 270);
  }

    /* Product detail view min heights */
    &.detail-view--product .map-micello {

      @include respond-min($non-palm) {
        @include to-rem(min-height, 240);
      }

      @include respond-min(978) {
        @include to-rem(min-height, 300);
      }
    }

    /* Deal detail view min heights */
    &.detail-view--deal .map-micello {

      @include respond-range($non-palm, 899) {
        @include to-rem(min-height, 295);
      }

      @include respond-min($lap-sml-end) {
        @include to-rem(min-height, 313);
      }
    }
}

  /* --Global-- */

  /* Headings */
  .detail-view__hdr {
    @include font-size(27, 1.2);
    @extend %mrg-base;
    color: $color-dark-txt;

    /* Increase text size at this breakpoint */
    @include respond-min($non-palm) {
      @include font-size(36, 1.2);
    }
  }

  .detail-view__hdr-sub {
    @include font-size(18, 1.5);
    @include to-rem(margin-bottom, $spacing-half);
    color: $color-light-txt;

    /* Increase text size at this breakpoint */
    @include respond-min($non-palm) {
      @include font-size($font-size-xlrg, 1.5);
    }
  }

  .detail-view__meta abbr {border-bottom: 0;}

  /* --Dividing lines-- */
  .detail-view__divider,
  .detail-view__divider--top-btm,
  .detail-view__divider--palm,
  .detail-view__divider--non-palm {
    border-style: solid;
    border-color: $color-grey-1;
    border-bottom-width: 1px;
  }

  /* Top & bottom */
  .detail-view__divider--top-btm {border-top-width: 1px;}

  /* Top only */
  .detail-view__divider--top {border-width: 1px 0 0 0;}

  /* Dividers only at these breakpoints */
  @include respond-min($non-palm) {
    .detail-view__divider--palm {border-width: 0;}
  }

  @include respond-max($palm) {
    .detail-view__divider--non-palm {border-width: 0;}
  }

  /* Divider for columns at this breakpoint */
  @include respond-min($non-palm) {
    .detail-view__divider--col {position: relative;}

      .detail-view__divider--col-line {
        position: absolute;
        z-index: 2;
        top: 0;
        background-color: $color-grey-1;
        width: 1px;
        height: 100%;

        /* Deal */
        .detail-view--deal & {left: 50%;}

        /* Product */
        .detail-view--product & {left: 60%;}
      }
  }

  /* Main image */
  .detail-view__media {text-align: center;}

  /* Descriptions (user generated content) */
  .detail-view__desc p {@extend %mrg-base;}

    /* Fine print */
    .detail-view__desc--fine-print {@include font-size($font-size-milli, 1.5);}

  /* Schedule */
  .detail-view__schedule {
    /* Need it for creating a bigger spacing between the content and box that wraps around `detail-view` */
    @include to-rem(padding-bottom, 32);

    abbr {border-bottom: 0;}
  }

  /* Spacing */
  .detail-view__mrg-base {@extend %mrg-base;}

  .detail-view__mrg-half {@include to-rem(margin-bottom, $spacing-half);}

  .detail-view__mrg-off {margin-bottom: 0;}

  /* Subtle text */
  .detail-view__subtle-txt {color: $color-light-txt;}

  /* Check store availability */
  .detail-view__check-avble {

    .detail-view__subtle-txt {@include font-size($font-size-sml);}

    /* Phone no + icon */
    em {
      @include font-size($font-size-lrg);
      display: block;

      /* Make inline and create left spacing at this breakpoint */
      @include respond-min(900) {
        display: inline;
        @include to-rem(margin-left, $spacing-base);
      }
    }
  }

  /* Centres list ('Also available at') */
  @include respond-max($palm) {
    .detail-view__centres {@include to-rem(margin-top, $spacing-sixth);}
  }

  /* Controls - 'Share' and 'Favourites' */
  .detail-view__controls {

    /* Buttons */
    .controls__btn {
      display: block;
      width: 100%;
      @include to-rem(padding, 12 $spacing-base+$spacing-half 11);
      @include font-size($font-size-sml, 1);

      /* Remove full width and add right border at this breakpoint */
      @include respond-min($non-palm) {
        border-right: 1px solid $color-grey-1;
        display: inline-block;
        width: auto;
      }

        /* Webkit */
        @include target-webkit {
          .icon--share:before {top: -2px;}
        }
    }
  }

  /* --Variations-- */

  /* Deal */
  .detail-view--deal {

    /* Faux columns applied to the grid */
    .grid {background-color: $color-off-white;}

      .grid__item:first-child {background-color: #fff;}

    /* Adjustment for the `.box--torn` abstraction so the torn paper bg image aligns with left/right borders */
    .box--torn {
      margin-left: -1px;
      margin-right: -1px;
    }

    /* Toggle content plugin adjustments */
    .toggle-content,
    .toggle-content--btn {@include to-rem(margin-top, $spacing-base);}

    .btn--expand-collapse {
      @include to-em(padding-top, $spacing-half);
      border-top: 0;
      box-shadow: inset 0 5px 5px -5px rgba(#000, 0.4);

      /* Old IE */
      @include old-ie {
        border-top: 1px solid $color-grey-1;
      }
    }
  }

  /* Product */
  .detail-view--product {

    /* Apply `table-layout: fixed` to grid so 'store link' text can be truncated */
    @include respond-max($palm) {
      .grid--rev-stack {table-layout: fixed;}
    }

    /* Meta */
    .detail-view__meta em {
      display: block;
      @include font-size(18, 1.3);

      /* Sale price */
      &.detail-view__meta__sale-price {
        color: $color-brand;

        /* Original price */
        s {
          color: $color-dark-txt;
          text-decoration: line-through;
        }
      }
    }

    /* Product not available in a centre */
    .detail-view__product-not-avble {
      @include font-size($font-size);
      @include to-rem(height, 330);
      background-color: $color-off-white;

      /* Alternate heights at these breakpoints */
      @include respond-range($non-palm, 899) {
        @include to-rem(height, 304);
      }

      @include respond-range(900, 977) {
        @include to-rem(height, 284);
      }

      @include respond-min(978) {
        @include to-rem(height, 344);
      }

        /* Inner container */
        > div {
          width: 80%;
          margin: 0 auto;
        }

          /* --Icons-- */
          .icon {

            &,
            &:before {
              display: block;

              /* Old IE */
              @include old-ie {
                display: none;
              }
            }

            &:before {color: $color-grey-1;}
          }

          /* Map icon */
          .icon--map:before {
            @include font-size(58, 1);
            @include to-rem(margin-bottom, -23);

            /* IE 9 */
            .ie-9 & {@include to-rem(margin-bottom, -26);}
          }

          /* Pin icon */
          .icon--pin:before {
            text-shadow: -2px -2px 0 $color-off-white,
                         3px 3px 0 $color-off-white;
            @include font-size(38, 1);
            @include to-rem(left, $spacing-half);

            /* IE 9 */
            .ie-9 & {color: darken($color-grey-1, 5%);}
          }
    }
  }

  /* Event */
  .detail-view--event {

    /* Meta */
    .detail-view__meta li {
      width: 50%;
      @include to-rem(padding-right, $spacing-half);

      /* Turn off for last child */
      &:last-child {
        padding-right: 0;
        text-align: right;
      }
    }
  }

  /* Movie */
  .detail-view--movie {

    /* Copy explaining to users how to purchase ticket */
    .detail-view__schedule p {@extend %mrg-base;}
  }

